Count command with rawData translates namespace too early

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Storage Execution
    • Fully Compatible
    • ALL
    • Execution Team 2025-02-17
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      With SERVER-97425, the count command with rawData translates the namespace when the invocation is constructed. However, this is too early as a concurrent time-series collection creation might not be seen by the translation despite it being seen when the command actually executes. This is especially an issue during secondary reads with causal consistency, since the wait for cluster time happens after the translation as well.

            Assignee:
            Gregory Noma
            Reporter:
            Gregory Noma
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: