SERVER-99818 Perform `rawData` translation for `count` later (#31579)

GitOrigin-RevId: 71c8964c77ce59294c95d5874a20fe2f738ca7e8